--- a/ivy.xml
+++ b/ivy.xml
@@ -1,5 +1,5 @@
 <ivy-module version="1.0">
-    <info organisation="com.biomatters" module="BiocodeLIMS"/>
+    <info organisation="com.biomatters" module="EuPathDBPlugin"/>
 
     <configurations>
         <conf name="build" description="For building the plugin."/>
