--- a/ivy.xml
+++ b/ivy.xml
@@ -9,9 +9,7 @@
     <dependencies>
         <dependency org="com.biomatters" name="geneious.publicapi" rev="7.1.5" conf="build->api"/>
         <dependency org="com.google.code.gson" name="gson" rev="2.3.1" conf="build,test->default"/>
-        <dependency org="com.sun.jersey" name="jersey-core" rev="1.19" conf="build,test->default"/>
-        <dependency org="com.sun.jersey" name="jersey-client" rev="1.19" conf="build,test->default"/>
-        <dependency org="javax.ws.rs" name="jsr311-api" rev="1.1.1" conf="build,test->default"/>
+        <dependency org="org.glassfish.jersey.core" name="jersey-client" rev="2.16" conf="build,test->default"/>
         
         <!-- For tests -->
         <dependency org="junit" name="junit" rev="4.11" conf="build,test->default"/>
