--- a/ivy.xml
+++ b/ivy.xml
@@ -7,7 +7,7 @@
     </configurations>
 
     <dependencies>
-        <dependency org="com.biomatters" name="geneious.publicapi" rev="7.1.5" conf="build->api"/>
+        <dependency org="com.biomatters" name="geneious.publicapi" rev="7.1.5" conf="build->api; test->runtime"/>
         <dependency org="com.google.code.gson" name="gson" rev="2.3.1" conf="build,test->default"/>
         <dependency org="org.glassfish.jersey.core" name="jersey-client" rev="2.16" conf="build,test->default"/>
         
