--- a/ivy.xml
+++ b/ivy.xml
@@ -10,7 +10,9 @@
         <dependency org="com.biomatters" name="geneious.publicapi" rev="7.1.5" conf="build->api; test->runtime"/>
         <dependency org="com.google.code.gson" name="gson" rev="2.3.1" conf="build,test->default"/>
         <dependency org="org.glassfish.jersey.core" name="jersey-client" rev="2.16" conf="build,test->default"/>
-        
+        <dependency org="org.powermock" name="powermock-api-mockito" rev="1.6.1" conf="build,test->default"/>
+        <dependency org="org.powermock" name="powermock-module-junit4" rev="1.6.1" conf="build,test->default"/>
+
         <!-- For tests -->
         <dependency org="junit" name="junit" rev="4.11" conf="build,test->default"/>
     </dependencies>
