CYB-19 Convert separate PlasmoDB and PiroplasmaDB plugins into a single pluginb
- Code review fixes.
- Replaced JSON parsing with EntityProvider and POJO
- Updated test cases accordingly.

--- a/resources/com/biomatters/plugins/eupathdb/utils/eupathdb.properties
+++ b/resources/com/biomatters/plugins/eupathdb/utils/eupathdb.properties
@@ -1,7 +1,8 @@
-PIROPLASMADB.WEB_SERVICE_PREFIX_URL=http://PiroplasmaDB.org/webservices/GeneQuestions
-PIROPLASMADB.DBURL=http://beta.piroplasmadb.org/gene/
-PIROPLASMADB.WEB_SERVICE_SPECIES_PARAM_VALUE=Babesia bovis, Theileria annulata,Theileria parva
+PIROPLASMADB.WEB_SERVICE_URI=http://PiroplasmaDB.org/webservices/GeneQuestions
+PIROPLASMADB.DBURL=http://piroplasmadb.org/gene/
 
-PLASMODB.WEB_SERVICE_PREFIX_URL=http://PlasmoDB.org/webservices/GeneQuestions
-PLASMODB.DBURL=http://beta.plasmodb.org/gene/
-PLASMODB.WEB_SERVICE_SPECIES_PARAM_VALUE=Plasmodium falciparum, Plasmodium vivax, Plasmodium yoelii, Plasmodium berghei, Plasmodium chabaudi, Plasmodium knowlesi
+PIROPLASMADB.WEB_SERVICE_TEXT_SEARCH_ORGANISM_PARAM_VALUE=Babesia bovis, Theileria annulata,Theileria parva
+
+PLASMODB.WEB_SERVICE_URI=http://PlasmoDB.org/webservices/GeneQuestions
+PLASMODB.DBURL=http://plasmodb.org/gene/
+PLASMODB.WEB_SERVICE_TEXT_SEARCH_ORGANISM_PARAM_VALUE=Plasmodium falciparum, Plasmodium vivax, Plasmodium yoelii, Plasmodium berghei, Plasmodium chabaudi, Plasmodium knowlesi
