GEN-24097  Update and Improve our Ivy Repositories
Add checkmodified="true" to ivysettings.xml in order to force the cache to check if the ivy-VERSION.xml files have been updated more recently in the ivy repo
Add pattern attribute to the ivy:retrieve element so it can download the javadoc

--- a/build.xml
+++ b/build.xml
@@ -157,7 +157,7 @@
 	<ivy:settings file="ivysettings.xml" id="eupathdb.ivy.config" />
 
 	<target name="retrieve-build-dependencies" description="Retrieve dependencies with ivy">
-		<ivy:retrieve conf="build" settingsref="eupathdb.ivy.config" />
+		<ivy:retrieve conf="build" settingsref="eupathdb.ivy.config" pattern="lib/[artifact]-[type]-[revision].[ext]"/>
 	</target>
 
 	<target name="retrieve-test-runtime-dependencies" description="Retrieve the Geneious runtime for running the tests" unless="GeneiousFiles.exists">
