CYB-19 Convert separate PlasmoDB and PiroplasmaDB plugins into a single plugin - Code changes to use the default settings for organisms and search fields as per the website.

--- a/resources/com/biomatters/plugins/eupathdb/utils/eupathdb.properties
+++ b/resources/com/biomatters/plugins/eupathdb/utils/eupathdb.properties
@@ -1,8 +1,9 @@
 PIROPLASMADB.WEB_SERVICE_URI=http://PiroplasmaDB.org/webservices/GeneQuestions
 PIROPLASMADB.DBURL=http://piroplasmadb.org/gene/
-
-PIROPLASMADB.WEB_SERVICE_TEXT_SEARCH_ORGANISM_PARAM_VALUE=Babesia bovis, Theileria annulata,Theileria parva
+PIROPLASMADB.WEB_SERVICE_TEXT_SEARCH_ORGANISM_PARAM_VALUE=Babesia bigemina strain BOND,Babesia bovis T2Bo,Babesia microti strain RI,Cytauxzoon felis strain Winnie,Theileria annulata strain Ankara,Theileria equi strain WA,Theileria orientalis strain Shintoku,Theileria parva strain Muguga
+PIROPLASMADB.WEB_SERVICE_TEXT_FIELD_PARAM_VALUE=Alias,EC descriptions,Gene ID,Gene notes,Gene product,GO terms and definitions,Metabolic pathway names and descriptions,Protein domain names and descriptions,User comments
 
 PLASMODB.WEB_SERVICE_URI=http://PlasmoDB.org/webservices/GeneQuestions
 PLASMODB.DBURL=http://plasmodb.org/gene/
-PLASMODB.WEB_SERVICE_TEXT_SEARCH_ORGANISM_PARAM_VALUE=Plasmodium falciparum, Plasmodium vivax, Plasmodium yoelii, Plasmodium berghei, Plasmodium chabaudi, Plasmodium knowlesi
+PLASMODB.WEB_SERVICE_TEXT_SEARCH_ORGANISM_PARAM_VALUE=Plasmodium berghei ANKA,Plasmodium chabaudi chabaudi,Plasmodium cynomolgi strain B,Plasmodium falciparum 3D7,Plasmodium falciparum IT,Plasmodium gallinaceum 8A,Plasmodium knowlesi strain H,Plasmodium reichenowi CDC,Plasmodium vivax Sal-1,Plasmodium yoelii yoelii 17X,Plasmodium yoelii yoelii 17XNL,Plasmodium yoelii yoelii YM
+PLASMODB.WEB_SERVICE_TEXT_FIELD_PARAM_VALUE=Alias,EC descriptions,Gene ID,Gene notes,Genes of previous release,Gene product,GO terms and definitions,Metabolic pathway names and descriptions,Protein domain names and descriptions,Rodent Malaria Phenotype,User comments
