--- a/build.xml
+++ b/build.xml
@@ -27,8 +27,13 @@
     <property name="report" location="report"/>
     <property name="GeneiousFiles" location="GeneiousFiles"/>
 
-    <path id="classpath">
+    <path id="geneious.classpath">
         <fileset dir="${lib}"/>
+    </path>
+
+    <path id="geneious.classpath.test">
+        <path refid="geneious.classpath"/>
+        <pathelement location="${classes}"/>
     </path>
 
     <!-- hook to enable the geneious build to build this plugin -->
@@ -77,7 +82,7 @@
 
     <target name="compile-plugin" depends="prepare,retrieve-build-dependencies">
         <javac target="1.6" source="1.6" destdir="${classes}" debug="true">
-            <classpath refid="classpath"/>
+            <classpath refid="geneious.classpath"/>
             <src path="${src}"/>
         </javac>
     </target>
@@ -103,8 +108,7 @@
     <target name="compile-tests" depends="compile-plugin">
         <javac target="1.6" source="1.6" destdir="${test.classes}" debug="true">
             <classpath>
-                <path refid="classpath"/>
-                <pathelement location="${classes}"/>
+                <path refid="geneious.classpath.test" />
             </classpath>
             <src path="${test.src}"/>
         </javac>
@@ -118,7 +122,7 @@
                 </fileset>
             </batchtest>
             <classpath>
-                <path refid="classpath"/>
+                <path refid="geneious.classpath"/>
                 <file file="${GeneiousFiles}/iSeek.jar"/>
                 <fileset dir="${GeneiousFiles}/lib"/>
                 <pathelement location="${classes}"/>
