GEN-24953 Hook EuPathDB plugin into Geneious build
- Revet use of the test folder as both src and compilation directory for tests.  This would delete the test source code on a clean.

--- a/build.xml
+++ b/build.xml
@@ -22,7 +22,7 @@
     <property name="resources" location="resources"/>
     <property name="src" location="src"/>
     <property name="test.src" location="test"/>
-    <property name="test.classes" location="test"/>
+    <property name="test.classes" location="testclasses"/>
     <property name="test.data" location="testdata"/>
     <property name="report" location="report"/>
     <property name="GeneiousFiles" location="GeneiousFiles"/>
