--- a/build.xml
+++ b/build.xml
@@ -90,18 +90,18 @@
         <available file="${test.src}" type="dir"/>
     </condition>
 
-    <target name="compile-tests" depends="compile-plugin, retrieve-test-runtime-dependencies" if="tests.exist">
+    <target name="compile-tests" depends="compile-plugin, retrieve-test-runtime-dependencies" if="tests.exists">
         <javac target="1.6" source="1.6" destdir="${test.classes}" debug="true">
             <classpath refid="classpath.test"/>
             <src path="${test.src}"/>
         </javac>
     </target>
 
-    <condition property="integration.tests.exist">
+    <condition property="integration.tests.exists">
         <available file="${integration.src}" type="dir"/>
     </condition>
 
-    <target name="compile-integration-tests" depends="compile-plugin, retrieve-test-runtime-dependencies" if="integration.tests.exist">
+    <target name="compile-integration-tests" depends="compile-plugin, retrieve-test-runtime-dependencies" if="integration.tests.exists">
         <javac target="1.6" source="1.6" destdir="${test.integration}" debug="true">
             <classpath refid="classpath.test"/>
             <src path="${integration.src}"/>
@@ -186,7 +186,7 @@
     </target>
 
     <target name="retrieve-test-runtime-dependencies" description="Retrieve the Geneious runtime for running the tests"
-            unless="GeneiousFiles.exists">
+            unless="GeneiousFiles.exists" if="tests.exists">
         <ivy:retrieve conf="test" type="resource" settingsref="eupathdb.ivy.config"
                       pattern="${basedir}/[artifact].[ext]"/>
         <unzip src="GeneiousFiles.zip" dest="."/>
