--- a/geneiousplugin.gradle
+++ b/geneiousplugin.gradle
@@ -133,5 +133,5 @@ task runGeneious(dependsOn: [extractGeneiousRuntimeFiles,build], type: JavaExec)
     maxHeapSize '1024M'
     jvmArgs '-XX:+UseCompressedOops', '-XX:+UseConcMarkSweepGC', '-ea', '-Xss512K', '-XX:MaxPermSize=256M','-Djava.util.logging.config.file=no_logging.properties'
     environment "DISPLAY", ":0.0"
-    environment "DYLD_LIBRARY_PATH", "/Library/Application Support/Geneious/Frameworks"
+    environment "DYLD_LIBRARY_PATH", "./activation/macos:./native_libs/macos"
 }
